<resources>
    <string name="app_name">g1cafetinUes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agregar_detalle">Agregar Detalle</string>
    <string name="actualizar_detalle">Actualizar Detalle</string>
    <string name="consultar_detalle">Consultar Detalle</string>
    <string name="eliminar_detalle">Eliminar Detalle</string>
    <string name="cantidad">Cantidad</string>
    <string name="id_detalle">ID Detalle</string>
    <string name="ingrese_cantidad">Ingrese Cantidad</string>
    <string name="ingrese_id_detalle">Ingrese ID Detalle</string>
    <string name="ingrese_id_pedido">Ingrese ID Pedido</string>
    <string name="ingrese_id_producto">Ingrese ID Producto</string>
    <string name="cancelar">CANCELAR</string>
    <string name="aceptar">ACEPTAR</string>
</resources>
