<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_cantidad"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/cantidad"
            android:layout_marginBottom="25dp"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/txt_idDetalle"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:text="@string/id_detalle"
            android:layout_marginBottom="25dp"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/txt_idPedido"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:text="ID Pedido"
            android:layout_marginBottom="25dp"
            tools:ignore="RtlCompat" />

        <TextView
            android:id="@+id/txt_idProducto"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center_vertical"
            android:textAlignment="center"
            android:text="ID Producto"
            android:layout_marginBottom="25dp"
            tools:ignore="RtlCompat" />

        <Button
            android:id="@+id/btn_agregarAceptar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aceptar" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editText_cantidad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/ingrese_cantidad"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText_idDetalle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/ingrese_id_detalle"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText_idPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/ingrese_id_pedido"
            android:inputType="number" />

        <EditText
            android:id="@+id/editText_idProducto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/ingrese_id_producto"
            android:inputType="number" />

        <Button
            android:id="@+id/btn_agregarCancelar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelar" />
    </LinearLayout>
</LinearLayout>