<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detalle_producto_pedido.MantenimientoDetalleProductoPedidoFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_AgregarDetalleProductoPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/agregar_detalle" />

        <Button
            android:id="@+id/btn_ActualizarDetalleProductoPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/actualizar_detalle" />

        <Button
            android:id="@+id/btn_ConsultarDetalleProductoPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/consultar_detalle" />

        <Button
            android:id="@+id/btn_EliminarDetalleProductoPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/eliminar_detalle" />
    </LinearLayout>
</FrameLayout>